--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <h1>News Portal</h1>
+            <p>scroll news portals' window to see more</p>
         </header>
         <main>
             <div class="sources buttons"></div>
