feat: add character selection

--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -10,6 +10,13 @@
         <header>
             <h1>News Portal</h1>
             <p>scroll news portals' window to see more</p>
+        <ul class="alphabet-characters">
+            <li class="characters ch-1">A-E</li>
+            <li class="characters ch-2">F-J</li>
+            <li class="characters ch-3">K-O</li>
+            <li class="characters ch-4">P-T</li>
+            <li class="characters ch-5">U-Z</li>
+        </ul>
         </header>
         <main>
             <div class="sources buttons"></div>
