feat: add footer

--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -24,9 +24,21 @@
             <div class="news"></div>
         </main>
         <footer>
+            <a href="https://github.com/slysnek"
+            ><img
+              class="git-logo"
+              src="./assets/img/GitHub-Mark-64px.png"
+              alt="git logo"
+          /></a>
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
             </p>
+            <a href="https://rs.school/js/"
+            ><img
+              class="rs-logo"
+              src="./assets/img/rs_school_js.svg"
+              alt="rs logo"
+          /></a>
         </footer>
 
         <template id="sourceItemTemp">
